resolved white space

--- a/styles.css
+++ b/styles.css
@@ -107,147 +107,149 @@ section {
     display: block;
 }
 
-body {
-    line-height: 1;
-    font-family: 'Playfair Display', serif;
-    color: darkgrey;
-}
-
-input::placeholder {
-    text-align: right;
-    font-style: italic;
-}
-
-ol,
-ul {
-    list-style: none;
-}
-
-blockquote,
-q {
-    quotes: none;
-}
-
-blockquote:before,
-blockquote:after,
-q:before,
-q:after {
-    content: '';
-    content: none;
-}
-
-
-table {
-    border-collapse: collapse;
-    border-spacing: 0;
-}
-
-nav {
-    background-color: #2D3945;
-    color: white;
-    padding: 40px;
-    margin: auto;
-    text-align: center;
-    font-weight: bold;
-}
-
-main {
-    margin: 10px;
-}
-
-h1 {
-    font-family: 'Playfair Display';
-    font-size: x-large;
-    font-weight: bold;
-}
-
-h2 {
-    color: #2D3945;
-    padding: 10px;
-    font-size: x-large;
-    font-weight: bold;
-}
-
-hr {
-    width: 95%;
-}
-
-.sign-up {
-    text-align: center;
-    margin: 30px;
-}
-
-.contact-info {
-    padding: 10px;
-    margin: 20px 5px 5px 5px;
-    border-radius: 3px;
-    display: flex;
-    flex-direction: column;
-
-}
-
-input,
-select {
-    border-radius: 3px;
-    padding: 15px;
-    border-style: none;
-    background-color: #EFF0F1;
-    margin-bottom: 30px;
-}
-
-label {
-    margin: 0px 10px 10px 0px;
-}
-
-.zip {
-    width: 40%;
-}
-
-.newsletter div {
-    margin: 10px;
-    padding: 5px;
-    width: 100%;
-}
-
-button {
-    font-family: 'Playfair-Display';
-    background-color: #4EBBB5;
-    padding: 20px;
-    width: 100%;
-    font-size: x-large;
-    color: white;
-    border-radius: 3px;
-    border-style: none;
-    display: block;
-    margin: 10px;
-}
-
-legend p {
-    margin: 10px;
-}
-
-textarea {
-    background-color: #EFF0F1;
-    border-radius: 4px;
-    border-style: none;
-    width: 100%;
-    resize: none;
-    margin-top: 20px;
-    height: 120px;
-    overflow: hidden;
-}
-
-footer {
-    width: 100%;
-    text-align: center;
-    margin: 30px 0px 50px 0px;
-    font-style: italic;
-    height: 30px;
-}
-
 @media only screen and (min-width: 320px) {
+
+    html,
+    body {
+        line-height: 1;
+        font-family: 'Playfair Display', serif;
+        color: darkgrey;
+        overflow-x: hidden;
+    }
+
+    input::placeholder {
+        text-align: right;
+        font-style: italic;
+    }
+
+    ol,
+    ul {
+        list-style: none;
+    }
+
+    blockquote,
+    q {
+        quotes: none;
+    }
+
+    blockquote:before,
+    blockquote:after,
+    q:before,
+    q:after {
+        content: '';
+        content: none;
+    }
+
+
+    table {
+        border-collapse: collapse;
+        border-spacing: 0;
+    }
+
+    nav {
+        background-color: #2D3945;
+        color: white;
+        padding: 40px;
+        margin: auto;
+        text-align: center;
+        font-weight: bold;
+    }
+
     main {
-        max-width: 1000px;
+        margin: 10px;
+    }
+
+    h1 {
+        font-family: 'Playfair Display';
+        font-size: x-large;
+        font-weight: bold;
+    }
+
+    h2 {
+        color: #2D3945;
+        font-size: large;
+        font-weight: bold;
+        padding-bottom: 20px;
+    }
+
+    hr {
+        width: 95%;
+    }
+
+    .sign-up {
+        text-align: center;
+        margin: 30px;
+    }
+
+    .contact-info {
+        margin: 20px 5px 5px 5px;
+        border-radius: 3px;
+        display: flex;
+        flex-direction: column;
+
+    }
+
+    input,
+    select {
+        border-radius: 3px;
+        padding: 15px;
+        border-style: none;
+        background-color: #EFF0F1;
+        margin-bottom: 30px;
+    }
+
+    label {
+        margin: 0px 10px 10px 0px;
+    }
+
+    .zip {
+        width: 40%;
+    }
+
+    .newsletter div {
+        width: 100%;
+    }
+
+    button {
+        font-family: 'Playfair-Display';
+        background-color: #4EBBB5;
+        padding: 20px;
+        width: 100%;
+        font-size: x-large;
+        color: white;
+        border-radius: 3px;
+        border-style: none;
+        display: block;
+        margin-top: 10px;
+    }
+
+    p {
+        margin-bottom: 10px;
+    }
+
+    textarea {
+        background-color: #EFF0F1;
+        border-radius: 4px;
+        border-style: none;
+        width: 100%;
+        resize: none;
+        margin-top: 20px;
+        height: 120px;
+        padding: 0px;
+    }
+
+    footer {
+        width: 100%;
+        text-align: center;
+        margin: 30px 0px 50px 0px;
+        font-style: italic;
+        height: 30px;
+    }
+}
+
+@media only screen and (min-width: 768px) {
+    main {
+        max-width: 500px;
         margin: 0 auto;
     }
 }
